# build_logger

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: log.rs
tests/debug/: Cargo.toml  build.rs
tests/error/: Cargo.toml  build.rs
tests/info/: Cargo.toml  build.rs
tests/trace/: Cargo.toml  build.rs
tests/warn/: Cargo.toml  build.rs
