[package]
name = "build_logger"
version = "0.1.0"
authors = ["Anders Evensen"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/build_logger"
description = "A logger to be used in build scripts."
categories = ["development-tools::build-utils", "development-tools::debugging"]
keywords = ["log", "build", "script", "logger", "cargo"]

[dependencies]
log = "0.4.29"
